Fix header alignment

--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,9 @@ body {
   padding-top: 4rem;
   display: grid;
   grid-template-rows: 1fr min-content 6rem 1fr;
-  grid-row-gap: 1.5rem; }
+  grid-template-columns: max-content;
+  grid-row-gap: 1.5rem;
+  justify-content: center; }
   .header__btn {
     align-self: start;
     justify-self: start; }
